src/Athena/Content/css/site.css
@import '~materialize-css/dist/css/materialize.css';
@import '~material-design-icons/iconfont/material-icons.css';
@import '~fullcalendar/dist/fullcalendar.css';

@import 'nav.css';
@import 'footer.css';

@media print {
    .visible-print {
        display: inherit !important;
    }

    .hidden-print {
        display: none !important;
    }

    .material-tooltip {
        display: none !important;
    }

   .card-panel, .card{
        -webkit-box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0), 0 0px 0px 0 rgba(0, 0, 0, 0), 0 0px 0px 0px rgba(0, 0, 0, 0);
        box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0), 0 0px 0px 0 rgba(0, 0, 0, 0), 0 0px 0px 0px rgba(0, 0, 0, 0);
    }
}

/* Wrapping element */
/* Set some basic padding to keep content from hitting the edges */

.carousel .carousel-item {
    width: 100%;
}

.tabs-content.carousel {
    height: 100%;
    overflow-x: hidden;
    overflow-y: hidden;
}

    .tabs-content.carousel .carousel-item {
        width: 100%;
        height: 550px;
    }

html, body {
    height: 100%;
}

html {
    overflow-y: scroll;
}
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

.all-rounded {
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.spacer {
    display: block;
}

#progress-bar {
    height: 2em;
    background: #cccccc;
    position: relative;
}

#progress-bar-percentage {
    background: #0D47A1;
    padding: 5px 0px;
    color: #FFF;
    text-align: center;
    height: 2em;
}

#progress-bar-percentage span {
    display: inline-block;
    position: absolute;
    width: 100%;
    left: 0;
}

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
}

#calendar {
    margin: 0 auto;
    background-color:white
}

.overlay {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0
}

.btn {
    background-color: #0D47A1;
}

.btn:hover {
    background-color: #1a237e;
}

.btn:focus {
    background-color: #1a237e;
}

.progress{
    height:2em;
    background-color:darkgrey;
}

.determinate {
    color: white;
    background-color: #0d47a1;
    display: inline-block;
    position: absolute;
    width: 70%;
    left: 0;
}

.cal-card-content{
    background-color:lightgray;
}

.user-tabs {
    padding-bottom:1.5em
}

.tabs .tab a.active {
    color: #0d47a1;
}

.tabs .tab a:hover {
    color: #0d47a1;
}

.tabs .tab a {
    color: #0d47a1;
}

.tabs .indicator {
    background-color: #0d47a1;
}

.striped {
    border: .15em solid black
}

.classUnordered{
    height:300px;
    overflow-y:scroll;
    background-color:gray
}

.courseCard {
    background-color: #0d47a1;
    margin-left:.25em;
    margin-right:.25em;
}
.courseCardTitle {
    margin-left:1em;
    color: white;
}
.courseCardContent {
    background-color: white;
}
.addclass_dropdowns {
    margin-top: 4em;
}

.complete_course_btn{
    margin-right:80px;
}

.courseTable tbody {
    display: block;
    height: 200px;
    overflow: auto;
}

.courseTable thead, .courseTable tbody tr {
        display: table;
        width: 100%;
        table-layout: fixed;
}

.courseTable thead {
    width: calc( 100% - 1em )
}

.courseTable table {
    width: 100%;
}

nav .chip {
    background-color: lightgray;
}

nav .chip:hover {
    color: white;
    background-color: #2962ff;
}

.tooltip {
    position: relative;
    display: inline-block;
}

.tooltip .tooltiptext {
    visibility: hidden;
    line-height: 39px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 2px;
    /* Position the tooltip */
    position: absolute;
    z-index: 1;
    top: 110%;
    left: 0px;
    right: 0px;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

